Collapse subtrees after unmap

--- a/src/ggrc/assets/javascripts/components/tree/templates/tree-item.mustache
+++ b/src/ggrc/assets/javascripts/components/tree/templates/tree-item.mustache
@@ -99,6 +99,7 @@
                         {child-models}="selectedChildModels"
                         {get-depth-filter}="@getDepthFilter"
                         {is-open}="expanded"
+                        (collapse-subtree)="collapseSubtree()"
       ></sub-tree-wrapper>
     </div>
   </lazy-render>
