--- a/src/ggrc/assets/javascripts/components/tree/templates/sub-tree-item.mustache
+++ b/src/ggrc/assets/javascripts/components/tree/templates/sub-tree-item.mustache
@@ -36,5 +36,6 @@
                     {child-models}="selectedChildModels"
                     {get-depth-filter}="@getDepthFilter"
                     {is-open}="expanded"
+                    (collapse-subtree)="collapseSubtree()"
   ></sub-tree-wrapper>
 </div>
