Add Buganizer controls to Audit info/modal pages

--- a/src/ggrc/assets/stylesheets/components/form/_ggrc-form.scss
+++ b/src/ggrc/assets/stylesheets/components/form/_ggrc-form.scss
@@ -76,6 +76,16 @@
       flex-basis: 250px;
       max-width: 250px;
       margin-right: 30px;
+
+      .ggrc-form-item__label {
+        &.required-label {
+          line-height: 18px;
+
+          i.fa-asterisk {
+            height: 18px;
+          }
+        }
+      }
     }
 
     .ggrc-from-item__checkbox-list {
