--- a/src/ggrc/assets/mustache/audits/modal_content.mustache
+++ b/src/ggrc/assets/mustache/audits/modal_content.mustache
@@ -207,6 +207,27 @@
     </div>
 
     {{#with_current_user_as 'current_user'}}<input type="hidden" name="modified_by_id" value="{{current_user.id}}">{{/with_current_user_as}}
+
+    <div class="expanded-area">
+      <div class="expand-link">
+        <a class="show-hidden-fields info-show-hide active" href="javascript://">
+          <span class="out">
+            <i class="fa fa-caret-right"></i>
+            SHOW
+          </span>
+          <span class="in">
+            <i class="fa fa-caret-down"></i>
+            HIDE
+          </span>
+          BUGANIZER INFO
+        </a>
+      </div>
+      <div class="hidden-fields-area">
+        <div class="ggrc-form">
+          {{>'/static/mustache/issue_tracker/modal-issue-tracker-fields.mustache'}}
+        </div>
+      </div>
+    </div>
   </form>
 {{/instance}}
 </div>
