--- a/src/ggrc/assets/mustache/issue_tracker/modal-issue-tracker-fields.mustache
+++ b/src/ggrc/assets/mustache/issue_tracker/modal-issue-tracker-fields.mustache
@@ -75,5 +75,26 @@
         name="instance.issue_tracker.issue_severity">
       </dropdown>
     </div>
+
+    {{#if_instance_of instance "Assessment"}}
+      <div class="ggrc-form-item__multiple-row {{#instance.computed_errors.issue_tracker.title}}field-failure{{/instance.computed_errors.issue_tracker.title}}">
+        <label class="form-label required-label ggrc-form-item__label">
+          Issue Title
+          <i class="fa fa-asterisk"></i>
+        </label>
+        <issue-tracker-fields-pre-population
+          {instance}="instance"
+          {from-value}="instance.title"
+          {(to-value)}="instance.issue_tracker.title"
+        >
+          <input data-id="code_txtbx"
+            class="input-block-level"
+            placeholder="Enter Issue Title"
+            type="text"
+            {($value)}="instance.issue_tracker.title"
+          />
+        </issue-tracker-fields-pre-population>
+      </div>
+    {{/if}}
   </div>
 {{/if}}
