--- a/src/ggrc/assets/stylesheets/components/form/_ggrc-form.scss
+++ b/src/ggrc/assets/stylesheets/components/form/_ggrc-form.scss
@@ -40,12 +40,15 @@
   }
 
   .additional-fields {
+
+    .hidden-issue-tracker-fields-area,
     .hidden-fields-area {
       padding: 0;
       border: 0;
       margin-top: 20px;
     }
 
+    .expand-issue-tracker-link,
     .expand-link {
       margin-top: 25px;
 
@@ -54,6 +57,11 @@
         border: 0;
         font-size: 12px;
         font-weight: bold;
+        outline: none;
+
+        &:hover {
+          text-decoration:none;
+        }
       }
 
       i {
@@ -121,8 +129,8 @@
     .ggrc-form-item__small-text {
       opacity: 0.7;
       color: gray;
-      margin-bottom: 10px;
-      line-height: 8px;
+      margin-bottom: 8px;
+      line-height: 10px;
     }
   }
 }
