Add Buganizer contrpls to Assessment info page

--- a/src/ggrc/assets/stylesheets/components/info-pane/_info-pane.scss
+++ b/src/ggrc/assets/stylesheets/components/info-pane/_info-pane.scss
@@ -147,4 +147,14 @@
       }
     }
   }
+
+  .expanded-area {
+    .info-expand {
+      margin-top: 0;
+    }
+
+    .hidden-fields-area small {
+      font-size: 11px;
+    }
+  }
 }
