--- a/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
@@ -483,6 +483,26 @@
                         </div>
                     </div>
                 </div>
+                {{#if instance.issue_tracker.audit_enabled}}
+                    <div class="expanded-area">
+                        <div class="info-expand">
+                            <a class="show-hidden-fields info-show-hide active" href="javascript://">
+                                <span class="out">
+                                    <i class="fa fa-caret-right"></i>
+                                    SHOW
+                                </span>
+                                <span class="in">
+                                    <i class="fa fa-caret-down"></i>
+                                    HIDE
+                                </span>
+                                BUGANIZER INFO
+                            </a>
+                        </div>
+                        <div class="hidden-fields-area">
+                            {{>'/static/mustache/components/assessment/info-pane/info-pane-issue-tracker-fields.mustache'}}
+                        </div>
+                    </div>
+                {{/if}}
             </div>
             </div>
           </tab-panel>
