--- a/src/ggrc/assets/mustache/assessment_templates/info.mustache
+++ b/src/ggrc/assets/mustache/assessment_templates/info.mustache
@@ -107,6 +107,27 @@
             </div>
           </div>
 
+          <div class="row-fluid wrap-row">
+            <div class="expanded-area">
+              <div class="info-expand">
+                <a class="show-hidden-fields info-show-hide active" href="javascript://">
+                  <span class="out">
+                    <i class="fa fa-caret-right"></i>
+                    SHOW
+                  </span>
+                  <span class="in">
+                    <i class="fa fa-caret-down"></i>
+                    HIDE
+                  </span>
+                  BUGANIZER INFO
+                </a>
+              </div>
+              <div class="hidden-fields-area">
+                {{>'/static/mustache/buganizer_integration/info-buganizer-fields.mustache'}}
+              </div>
+            </div>
+          </div>
+
         </tab-panel>
         <tab-panel {(panels)}="panels" title-text="Change Log">
             <revision-log {instance}="instance"></revision-log>
