--- a/src/ggrc/assets/stylesheets/components/info-pane/_info-pane.scss
+++ b/src/ggrc/assets/stylesheets/components/info-pane/_info-pane.scss
@@ -15,6 +15,12 @@
   &__section {
     display: block;
     margin: 0 16px 16px 0;
+
+    &.info-pane__buganizer-link {
+      display: flex;
+      justify-content: flex-end;
+      margin: 0 25px 0 0;
+    }
   }
 
   &__section-content {
