--- a/src/ggrc/assets/mustache/components/custom-roles/custom-roles-modal.mustache
+++ b/src/ggrc/assets/mustache/components/custom-roles/custom-roles-modal.mustache
@@ -6,6 +6,9 @@
 <div class="flex-box">
   <related-people-access-control
     class="width-100"
+    {conflict-roles}="conflictRoles"
+    {include-roles}="includeRoles"
+    {exclude-roles}="excludeRoles"
     {updatable-group-id}="updatableGroupId"
     {is-new-instance}="isNewInstance"
     {instance}="instance">
