--- a/src/ggrc/assets/mustache/components/custom-roles/custom-roles.mustache
+++ b/src/ggrc/assets/mustache/components/custom-roles/custom-roles.mustache
@@ -8,6 +8,7 @@
   <related-people-access-control
     class="width-100"
     (save-custom-role)="save(%event)"
+    {conflict-roles}="conflictRoles"
     {include-roles}="includeRoles"
     {exclude-roles}="excludeRoles"
     {updatable-group-id}="updatableGroupId"
