Use audit.issue_tracker.enabled instead of additional field of Assessment

--- a/src/ggrc/assets/mustache/assessment_templates/modal_content.mustache
+++ b/src/ggrc/assets/mustache/assessment_templates/modal_content.mustache
@@ -282,7 +282,7 @@
       </div><!-- custom-attr-wrap end -->
     </div>
 
-    {{#if instance.issue_tracker.audit_enabled}}
+    {{#if instance.can_use_issue_tracker}}
       <div class="row-fluid">
         <div class="expanded-area">
           <div class="expand-link">
