--- a/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
@@ -495,7 +495,7 @@
                         </div>
                     </div>
                 </div>
-                {{#if instance.issue_tracker.audit_enabled}}
+                {{#if instance.can_use_issue_tracker}}
                     <div class="expanded-area">
                         <div class="info-expand">
                             <a class="show-hidden-fields info-show-hide active" href="javascript://">
