--- a/src/ggrc/assets/mustache/assessment_templates/info.mustache
+++ b/src/ggrc/assets/mustache/assessment_templates/info.mustache
@@ -107,7 +107,7 @@
             </div>
           </div>
 
-          {{#if instance.issue_tracker.audit_enabled}}
+          {{#if instance.can_use_issue_tracker}}
             <div class="row-fluid wrap-row">
               <div class="expanded-area">
                 <div class="info-expand">
