--- a/src/ggrc/assets/mustache/assessments/modal_content.mustache
+++ b/src/ggrc/assets/mustache/assessments/modal_content.mustache
@@ -281,7 +281,7 @@
         </div>
       </div>
 
-      {{#if instance.issue_tracker.audit_enabled}}
+      {{#if instance.can_use_issue_tracker}}
         <div class="additional-fields">
           <div class="expand-issue-tracker-link">
             <a class="show-hidden-fields info-show-hide active" href="javascript://">
