Update Assessment object-state-toolbar. Remove 'assignees' properties

--- a/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
@@ -210,6 +210,7 @@
                     <!-- End of Modal Window -->
                     <assessment-controls-toolbar class="assessment-controls-toolbar"
                         {instance}="instance"
+                        {verifiers}="verifiers"
                         {form-state}="formState"
                         (on-state-change)="onStateChange(%event)"
                     ></assessment-controls-toolbar>
