Add possibility to set order of people groups

--- a/src/ggrc/assets/mustache/components/custom-roles/custom-roles-modal.mustache
+++ b/src/ggrc/assets/mustache/components/custom-roles/custom-roles-modal.mustache
@@ -7,6 +7,7 @@
   <related-people-access-control
     class="width-100"
     {conflict-roles}="conflictRoles"
+    {order-of-roles}="orderOfRoles"
     {include-roles}="includeRoles"
     {exclude-roles}="excludeRoles"
     {updatable-group-id}="updatableGroupId"
