--- a/src/ggrc/assets/mustache/components/custom-roles/custom-roles.mustache
+++ b/src/ggrc/assets/mustache/components/custom-roles/custom-roles.mustache
@@ -9,6 +9,7 @@
     class="width-100"
     (save-custom-role)="save(%event)"
     {conflict-roles}="conflictRoles"
+    {order-of-roles}="orderOfRoles"
     {include-roles}="includeRoles"
     {exclude-roles}="excludeRoles"
     {updatable-group-id}="updatableGroupId"
