Use Plural names of Assessment roles

--- a/src/ggrc/assets/mustache/assessments/modal_content.mustache
+++ b/src/ggrc/assets/mustache/assessments/modal_content.mustache
@@ -104,20 +104,20 @@
             </div>
             <div class="ggrc-form-item__checkbox-item">
               <label class="input--inline">
-                    <input tabindex="5" type="checkbox" can-value="values.Creator">
-                    Notify creator(s)
+                    <input tabindex="5" type="checkbox" can-value="values.Creators">
+                    Notify creators
                 </label>
             </div>
             <div class="ggrc-form-item__checkbox-item">
               <label class="input--inline">
-                    <input tabindex="6" type="checkbox" can-value="values.Assessor">
-                    Notify assignee(s)
+                    <input tabindex="6" type="checkbox" can-value="values.Assignees">
+                    Notify assignees
               </label>
             </div>
             <div class="ggrc-form-item__checkbox-item">
               <label class="input--inline">
-                    <input tabindex="7" type="checkbox" can-value="values.Verifier">
-                    Notify verifier(s)
+                    <input tabindex="7" type="checkbox" can-value="values.Verifiers">
+                    Notify verifiers
                 </label>
             </div>
           </checkbox-to-list>
