Add lhn-popup-people component

--- a/src/ggrc/assets/mustache/assessments/assignable_extended_info.mustache
+++ b/src/ggrc/assets/mustache/assessments/assignable_extended_info.mustache
@@ -30,7 +30,8 @@
   </div>
   <div class="row-fluid">
     <div class="span9">
-      <people-list instance="instance"></people-list>
+      <h6>People</h6>
+      <lhn-popup-people {instance}="instance"></lhn-popup-people>
     </div>
   </div>
   <div class="row-fluid">
